# Task-Manager-App

./: .gitignore  Changelog.md  Dockerfile  LICENSE  README.md  pyproject.toml  requeriments.txt
app/: database.py  main.py  settings.py
app/api/v1/: task_api.py
app/api/v2/: task_api.py
app/api/v3/: task_api.py
app/crud/: task.py
app/crud/v1/: task.py
app/crud/v2/: task.py
app/models/: base.py  task.py
app/schemas/: schemas.py
app/utils/: exceptions.py  logging.py
